fix alignment viz7

--- a/css/test.css
+++ b/css/test.css
@@ -216,7 +216,7 @@
 
 #scrolly {
     position: relative;
-    padding: 1rem;
+    padding: 1rem 0 1rem 0;
 }
 
 article {
